# HomeBot

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: app.rs  links.rs  main.rs  recipe.rs  revive.rs  run.rs  serialization.rs  utils.rs
src/app_struct/: mod.rs  serialization.rs
src/app_struct/app_state/: mod.rs
src/app_struct/app_state/app_command/: mod.rs
src/app_struct/app_state/app_command/archive_link/: message.rs  mod.rs  payload.rs
src/app_struct/app_state/app_command/main_menu/: mod.rs  payload.rs
src/app_struct/app_state/app_command/view_link/: mod.rs  payload.rs
src/commands/: mod.rs
src/commands/archive_link/: entry_point.rs  mod.rs
src/commands/archive_link/actions/: choose_or_create_category.rs  create_category.rs  desicison.rs  finish.rs  mod.rs
src/commands/entry_points/: executing.rs  mod.rs  starting.rs
src/commands/main_menu/: entry_point.rs  init.rs  mod.rs
src/commands/main_menu/actions/: selection.rs
src/commands/send_help/: mod.rs
src/commands/view_link/: entry_points.rs  mod.rs
src/commands/view_link/actions/: choose_name.rs  finalize.rs  mod.rs
src/payloads/: mod.rs
src/persistence/: loading.rs  mod.rs  saving.rs
src/types/: callback.rs  general.rs  link_store.rs  mod.rs
src/workflows/: add_recipe.rs  create_links.rs  edit_links.rs  get_recipe.rs  mod.rs  view_links.rs
src/workflows/commands/: callbacks.rs  mod.rs
src/workflows/commands/general_commands/: links.rs  mod.rs  recipes.rs  view_links.rs
src/workflows/commands/special_commands/: create_links.rs  mod.rs  start_create_links.rs
