[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
dirs = "4.0.0"
env_logger = "0.9.1"
futures = "0.3"
log = "0.4.17"
serde = "1.0"
serde_json = "1.0"
telegram-bot = "0.8"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "1.2", features = ["v4"] }
